--- a/kc868-ai.yaml
+++ b/kc868-ai.yaml
@@ -36,7 +36,9 @@ captive_portal:
 #  type: LAN8720
 #  mdc_pin: GPIO23
 #  mdio_pin: GPIO18
-#  clk_mode: GPIO17_OUT
+#  clk:
+#    pin: GPIO17
+#    mode: CLK_OUT
 #  phy_addr: 0
 #  domain: .iot.vonkio.com
 
