--- a/sonoff-s31-base.yaml
+++ b/sonoff-s31-base.yaml
@@ -10,18 +10,14 @@ wifi:
   networks:
   - ssid: !secret wifi_ssid
     password: !secret wifi_password
-  - ssid: !secret old_wifi_ssid
-    password: !secret old_wifi_password  
   ap: # enable fallback hotspot (captive portal) in case wifi connection fails
-    ssid: "${devicename} Fallback Hotspot"
+    ssid: "${name} Fallback Hotspot"
     password: !secret wifi_password
 
-# template starts here
-
 esphome:
-  name: ${devicename}
-  comment: ${device_description}
-  friendly_name: ${friendly_devicename}
+  name: ${name}
+  comment: ${description}
+  friendly_name: ${friendly_name}
 
 esp8266:
   board: esp01_1m
@@ -30,7 +26,6 @@ esp8266:
 logger:
   baud_rate: 0 # (UART logging interferes with cse7766)
   
-# Remove this line if you're not using Home Assistsant or your switch will restart every now and again
 api:
   encryption:
     key: !secret api_encryption_key 
@@ -43,8 +38,7 @@ web_server:
   port: 80
   include_internal: true
 
-# Sync time with Home Assistant
-# Used to calculate total daily energy
+# used to calculate total daily energy
 time:
   - platform: homeassistant
     id: ha_time  
