--- a/bt-proxy-6.yaml
+++ b/bt-proxy-6.yaml
@@ -3,7 +3,8 @@
 substitutions:
   name: bt-proxy-6
   friendly_name: "BT Proxy 6"
-  description: "Bluetooth proxy device for triangulating devices"
+  description: "Bluetooth proxy for triangulating devices"
+  update_interval_wifi: "120s"
 
 # bt-proxy generic config
 
