--- a/sonoff-s20-base.yaml
+++ b/sonoff-s20-base.yaml
@@ -14,7 +14,7 @@
 # GPIO13 - Green LED (HIGH = off, LOW = on)
 
 wifi:
-  domain: .iot.vonkio.com
+  domain: !secret domain_name
   min_auth_mode: WPA2
   reboot_timeout: 0s
   networks:
