--- a/secrets-redacted.yaml
+++ b/secrets-redacted.yaml
@@ -1,4 +1,5 @@
-wifi_ssid: "REDACTED"
-wifi_password: "REDACTED"
-ota_password: "REDACTED"
-api_encryption_key: "REDACTED"
+wifi_ssid: "your-wifi-ssid"
+wifi_password: "your-wifi-password"
+domain: "your.iot.domain"
+ota_password: "your-ota-password"
+api_encryption_key: "your-api-encryption-key"
