correct domain_name key

--- a/secrets-redacted.yaml
+++ b/secrets-redacted.yaml
@@ -1,5 +1,5 @@
 wifi_ssid: "your-wifi-ssid"
 wifi_password: "your-wifi-password"
-domain: "your.iot.domain"
+domain_name: "your.iot.domain"
 ota_password: "your-ota-password"
 api_encryption_key: "your-api-encryption-key"
