--- a/sonoff-s20-base.yaml
+++ b/sonoff-s20-base.yaml
@@ -1,6 +1,10 @@
 # Sonoff S20 generic configuration
 
-# based on https://devices.esphome.io/devices/Sonoff-S20/
+# If you get "ERROR Running command failed: Failed to connect to ESP32: Wrong boot mode detected (0x13)! The chip needs to be in download mode.",
+# then bring GPIO0 down (press BOOT), while the esphome upload starts (and applies RST).
+# Then let go. See https://docs.espressif.com/projects/esptool/en/latest/esp32/advanced-topics/boot-mode-selection.html
+
+# Based on https://devices.esphome.io/devices/Sonoff-S20/
 #
 # RESTORE_DEFAULT_OFF          - Attempt to restore state and default to OFF if not possible to restore.
 # RESTORE_DEFAULT_ON           - Attempt to restore state and default to ON if not possible to restore.
