--- a/sonoff-s20-base.yaml
+++ b/sonoff-s20-base.yaml
@@ -43,9 +43,9 @@ ota:
   - platform: esphome
     password: !secret ota_password
 
-web_server:
-  port: 80
-  include_internal: true
+#web_server:
+#  port: 80
+#  include_internal: true
 
 uart:
   rx_pin: RX
