--- a/sonoff-s20-base.yaml
+++ b/sonoff-s20-base.yaml
@@ -20,8 +20,8 @@ wifi:
   networks:
   - ssid: !secret wifi_ssid
     password: !secret wifi_password
-  ap:
-    ssid: "${name} Fallback Hotspot"
+  ap: # enable fallback ap captive portal in case wifi connection fails
+    ssid: "${name} Config"
     password: !secret wifi_password
 
 esphome:
@@ -43,9 +43,9 @@ ota:
   - platform: esphome
     password: !secret ota_password
 
-#web_server:
-#  port: 80
-#  include_internal: true
+web_server:
+  port: 80
+  include_internal: true
 
 uart:
   rx_pin: RX
