--- a/sonoff-s31-3.yaml
+++ b/sonoff-s31-3.yaml
@@ -2,7 +2,7 @@
 
 substitutions:
   name: "sonoff-s31-3"
-  friendly_name: "Sonoff S31 3"
+  friendly_name: "Sonoff-S31 3"
   description: "Socket switch with power monitoring"
   voltage_cal: "0.5"
   update_interval_wifi: "120s"
