--- a/sonoff-s31-base.yaml
+++ b/sonoff-s31-base.yaml
@@ -27,7 +27,7 @@ esphome:
   friendly_name: ${friendly_name}
 
 esp8266:
-  board: esp12e # was esp01_1m
+  board: esp12e
   early_pin_init: false # prevent the on-off-on during firmware upload
 
 logger:
@@ -56,36 +56,6 @@ uart:
   parity: EVEN
   stop_bits: 1
 
-text_sensor:
-  - platform: wifi_info
-    ip_address:
-      name: "IP"
-      id: device_ip
-      icon: "mdi:ip-outline"
-      #update_interval: ${update_interval_wifi}
-    #dns_address:
-    #  name: "DNS"
-    #  id: device_dns
-    #  icon: "mdi:dns-outline"
-    #  #update_interval: ${update_interval_wifi}
-    ssid:
-      name: "SSID"
-      id: device_ssid
-      icon: "mdi:wifi-settings"
-      #update_interval:  ${update_interval_wifi}
-    #bssid:
-    #  name: "BSSID"
-    #  icon: "mdi:wifi-settings"
-    #  update_interval:  ${update_interval_wifi}
-    #mac_address:
-    #  name: "MAC"
-    #  icon: "mdi:network-outline"
-    #scan_results:
-    #  name: "Wifi Scan"
-    #  icon: "mdi:wifi-refresh"
-    #  update_interval:  ${update_interval_wifi}
-    #  disabled_by_default: true
-
 binary_sensor:
   # exposes the node state (if it’s connected to via MQTT/native API) for Home Assistant.
   #- platform: status
@@ -113,96 +83,6 @@ binary_sensor:
   - platform: template
     id: threshold_status
     name: "Above Threshold"
-
-sensor:
-  - platform: wifi_signal
-    name: "WiFi Signal"
-    update_interval:  ${update_interval_wifi}
-
-  - platform: cse7766 # https://esphome.io/components/sensor/cse7766.html
-    #current:
-    #  name: "Current"
-    #  id: current
-    #  state_class: measurement
-    #  device_class: current
-    #  unit_of_measurement: A
-    #  accuracy_decimals: 1
-    #  filters:
-    #    - throttle_average: ${cse7766_throttle_interval}
-    voltage:
-      name: "Voltage"
-      id: voltage
-      state_class: measurement
-      device_class: voltage
-      unit_of_measurement: V
-      accuracy_decimals: 0
-      filters:
-        - throttle_average: ${cse7766_throttle_interval}
-        - offset: ${voltage_cal}
-    power:
-      name: "Power"
-      id: power
-      state_class: measurement
-      device_class: power
-      unit_of_measurement: W
-      accuracy_decimals: 0
-      filters:
-        - throttle_average: ${cse7766_throttle_interval}
-      on_value:  # set or clear threshold_status template binary sensor depending on whether power usage is over threshold
-        - if:
-            condition:
-              lambda: 'return (x >= id(power_threshold).state);'
-            then:
-              - binary_sensor.template.publish:
-                  id: threshold_status
-                  state: ON
-              - if:
-                  condition:
-                    lambda: |-
-                      return strcmp(id(select_led).current_option(), "Threshold") == 0;
-                  then:
-                    - switch.turn_on: blue_led
-            else:
-              - binary_sensor.template.publish:
-                  id: threshold_status
-                  state: OFF
-              - if:
-                  condition:
-                    lambda: |-
-                      return strcmp(id(select_led).current_option(), "Threshold") == 0;
-                  then:
-                    - switch.turn_off: blue_led
-    #apparent_power:
-    #  name: "Apparent Power"
-    #  accuracy_decimals: 1
-    #  filters:
-    #    - throttle_average: ${cse7766_throttle_interval}
-
-    #power_factor:
-    #  name: "Power Factor"
-    #  accuracy_decimals: 1
-    #  filters:
-    #    - throttle_average: ${cse7766_throttle_interval}
-
-    #energy:
-    #  name: "Energy"
-    #  accuracy_decimals: 3
-    #  unit_of_measurement: kWh
-    #  state_class: total_increasing
-    #  device_class: energy
-    #  filters:
-    #    - throttle: ${cse7766_throttle_interval}
-    #    - multiply: 0.001 # convert W to kW
-
-  - platform: total_daily_energy
-    name: "Daily Energy"
-    power_id: power
-    filters:
-      - multiply: 0.001 # convert W to kW
-    unit_of_measurement: kWh
-    state_class: total_increasing
-    device_class: energy
-    accuracy_decimals: 3
 
 number: # used as a threshold for whether the plugged-in devices is running
   - platform: template
@@ -323,3 +203,123 @@ select:
               switch.turn_on: blue_led
             else:
               switch.turn_off: blue_led
+
+sensor:
+  - platform: wifi_signal
+    name: "WiFi Signal"
+    update_interval:  ${update_interval_wifi}
+
+  - platform: cse7766 # https://esphome.io/components/sensor/cse7766.html
+    #current:
+    #  name: "Current"
+    #  id: current
+    #  state_class: measurement
+    #  device_class: current
+    #  unit_of_measurement: A
+    #  accuracy_decimals: 1
+    #  filters:
+    #    - throttle_average: ${cse7766_throttle_interval}
+    voltage:
+      name: "Voltage"
+      id: voltage
+      state_class: measurement
+      device_class: voltage
+      unit_of_measurement: V
+      accuracy_decimals: 0
+      filters:
+        - throttle_average: ${cse7766_throttle_interval}
+        - offset: ${voltage_cal}
+    power:
+      name: "Power"
+      id: power
+      state_class: measurement
+      device_class: power
+      unit_of_measurement: W
+      accuracy_decimals: 0
+      filters:
+        - throttle_average: ${cse7766_throttle_interval}
+      on_value:  # set or clear threshold_status template binary sensor depending on whether power usage is over threshold
+        - if:
+            condition:
+              lambda: 'return (x >= id(power_threshold).state);'
+            then:
+              - binary_sensor.template.publish:
+                  id: threshold_status
+                  state: ON
+              - if:
+                  condition:
+                    lambda: |-
+                      return strcmp(id(select_led).current_option(), "Threshold") == 0;
+                  then:
+                    - switch.turn_on: blue_led
+            else:
+              - binary_sensor.template.publish:
+                  id: threshold_status
+                  state: OFF
+              - if:
+                  condition:
+                    lambda: |-
+                      return strcmp(id(select_led).current_option(), "Threshold") == 0;
+                  then:
+                    - switch.turn_off: blue_led
+    #apparent_power:
+    #  name: "Apparent Power"
+    #  accuracy_decimals: 1
+    #  filters:
+    #    - throttle_average: ${cse7766_throttle_interval}
+
+    #power_factor:
+    #  name: "Power Factor"
+    #  accuracy_decimals: 1
+    #  filters:
+    #    - throttle_average: ${cse7766_throttle_interval}
+
+    #energy:
+    #  name: "Energy"
+    #  accuracy_decimals: 3
+    #  unit_of_measurement: kWh
+    #  state_class: total_increasing
+    #  device_class: energy
+    #  filters:
+    #    - throttle: ${cse7766_throttle_interval}
+    #    - multiply: 0.001 # convert W to kW
+
+  - platform: total_daily_energy
+    name: "Daily Energy"
+    power_id: power
+    filters:
+      - multiply: 0.001 # convert W to kW
+    unit_of_measurement: kWh
+    state_class: total_increasing
+    device_class: energy
+    accuracy_decimals: 3
+
+text_sensor:
+  - platform: wifi_info
+    ip_address:
+      name: "IP"
+      id: device_ip
+      icon: "mdi:ip-outline"
+      #update_interval: ${update_interval_wifi}
+    #dns_address:
+    #  name: "DNS"
+    #  id: device_dns
+    #  icon: "mdi:dns-outline"
+    #  #update_interval: ${update_interval_wifi}
+    ssid:
+      name: "SSID"
+      id: device_ssid
+      icon: "mdi:wifi-settings"
+      #update_interval:  ${update_interval_wifi}
+    #bssid:
+    #  name: "BSSID"
+    #  icon: "mdi:wifi-settings"
+    #  update_interval:  ${update_interval_wifi}
+    #mac_address:
+    #  name: "MAC"
+    #  icon: "mdi:network-outline"
+    #scan_results:
+    #  name: "Wifi Scan"
+    #  icon: "mdi:wifi-refresh"
+    #  update_interval:  ${update_interval_wifi}
+    #  disabled_by_default: true
