--- a/ble-tracker-1.yaml
+++ b/ble-tracker-1.yaml
@@ -1,7 +1,7 @@
-# bt-proxy device specific config
+# ble-tracker device specific config
 
 substitutions:
-  name: bte-tracker-1
+  name: ble-tracker-1
   friendly_name: "BLE Tracker 1"
   description: "Bluetooth Low Energy tracker for triangulating devices"
   update_interval_wifi: "120s"
